--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,9 @@
-<p>home works!</p>
+<div class="home">
+  <h1 id="companyName">Fresherview</h1>
+</div>
+
+<div class="newbusiness">
+  <button type="button" [routerLink]="['addLocation']" class="btn btn-primary newbusinessb">+ New Business</button>
+</div>
+
+<!-- <app-add-location></app-add-location> -->
