--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,30 @@
-<app-home></app-home>
+<!-- <app-home></app-home> -->
+<nav class="navbar navbar-expand-lg navbar-light bg-primary">
+  <div class="container-fluid barnav">
+    <a class="navbar-brand" routerLink="home">Fresherview</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
+      aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarText">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" routerLink="home">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="viewStats">Reports</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="triggerCampaign">Campaign</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="addLocation">Location</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="addReview">Review</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
 <router-outlet></router-outlet>
